@@ -9,10 +9,10 @@ test oo-1.1 {
 } -body {
     createTestFile {
         ##nagelfar syntax snit::type x cn
-        ##nagelfar syntax snit::method x cv
-        ##nagelfar syntax constructor cv
-        ##nagelfar syntax destructor cl
-        ##nagelfar syntax option x p*
+        ##nagelfar syntax snit::type::method x cv
+        ##nagelfar syntax snit::type::constructor cv
+        ##nagelfar syntax snit::type::destructor cl
+        ##nagelfar syntax snit::type::option x p*
         ##nagelfar syntax apa x*
         snit::type apa {
             option -x -default 10
